Sculpting while in dyntopo, parts of mesh unaffected by clay strips tool #39684

Closed
opened 2014-04-11 21:17:34 +02:00 by Craig Richardson · 10 comments

System Information
Windows 7, NVidia GTX 560 TI

Blender Version
Broken: 2.70

Short description of error
I opened up my scene, it was in Object mode at the time, so I selected the hand because I wanted to sculpt it to make it look better and more life like, so I went to Sculpt mode and activated dynamic topology.
I then selected the clay strips tool, I lowered the strength of the brush quite low so that it would not affect the shape to much nut instead increase the poly count a little bit so that the smooth tool would work a little bit better, then I held down shift to try and smooth it and I noticed nothing was happening so I went back to the clay strips tool amped up the strength and still nothing happened, however I noticed while I was dragging the brush over the mesh that in some parts of the mesh, it was being affected but it looks like really horrible deformation of the geometry (it looks really spikey and rough instead of really smooth), please can anyone help me, I initially thought that the Remesh modifier was to blame so I just stopped using it but know it is happening with meshes that have not been through the Remesh modifier. It is like I have masked the whole mesh apart from some areas, and the areas that are being affected, the behaviour of the clay strips tool is not correct with what I know it should be.

Exact steps for others to reproduce the error
Open up .blend file
Select hand L
Move to Sculpt mode
Select Clay Strips tool
Increase the strength to 50%
Change the falloff to the Square Falloff
Try Sculpting on the hand (Nothing happens, but in some areas something does happen but not what should happen)
Character_Base_Mesh_4(sculpting_on_hand_broke).blend

**System Information** Windows 7, NVidia GTX 560 TI **Blender Version** Broken: 2.70 **Short description of error** I opened up my scene, it was in Object mode at the time, so I selected the hand because I wanted to sculpt it to make it look better and more life like, so I went to Sculpt mode and activated dynamic topology. I then selected the clay strips tool, I lowered the strength of the brush quite low so that it would not affect the shape to much nut instead increase the poly count a little bit so that the smooth tool would work a little bit better, then I held down shift to try and smooth it and I noticed nothing was happening so I went back to the clay strips tool amped up the strength and still nothing happened, however I noticed while I was dragging the brush over the mesh that in some parts of the mesh, it was being affected but it looks like really horrible deformation of the geometry (it looks really spikey and rough instead of really smooth), please can anyone help me, I initially thought that the Remesh modifier was to blame so I just stopped using it but know it is happening with meshes that have not been through the Remesh modifier. It is like I have masked the whole mesh apart from some areas, and the areas that are being affected, the behaviour of the clay strips tool is not correct with what I know it should be. **Exact steps for others to reproduce the error** Open up .blend file Select hand L Move to Sculpt mode Select Clay Strips tool Increase the strength to 50% Change the falloff to the Square Falloff Try Sculpting on the hand (Nothing happens, but in some areas something does happen but not what should happen) [Character_Base_Mesh_4(sculpting_on_hand_broke).blend](https://archive.blender.org/developer/F84556/Character_Base_Mesh_4_sculpting_on_hand_broke_.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Whiteyboy-2

Added subscriber: @Whiteyboy-2
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-04-12 07:56:50 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This is yet another scaling issue. The problem goes away if you apply the scale before entering sculpt mode.

This is yet another scaling issue. The problem goes away if you apply the scale before entering sculpt mode.

Added subscriber: @Timo-1

Added subscriber: @Timo-1

This fixed the issue for me in the attached .blend:

Object mode, Apply scale (ctrl-A)
Edit mode, select all (A), recalculate normals (ctrl-N)

  • Sculpt mode works as expected.

This fixed the issue for me in the attached .blend: Object mode, Apply scale (ctrl-A) Edit mode, select all (A), recalculate normals (ctrl-N) - > Sculpt mode works as expected.

Thanks for the quick response, its much appreciated, I have been having this issue for ages know and everytime I had to retopologise the mesh each time this happened, initially I thought It was my .blend files becoming corrupt over time when I just left them, but know I know that is not the case, at least I now know how to solve the problem.

Thanks for the quick response, its much appreciated, I have been having this issue for ages know and everytime I had to retopologise the mesh each time this happened, initially I thought It was my .blend files becoming corrupt over time when I just left them, but know I know that is not the case, at least I now know how to solve the problem.

This issue was referenced by 56aa4eadcc

This issue was referenced by 56aa4eadcc3f439e79c71753299f462a83015533

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 56aa4eadcc.

Closed by commit 56aa4eadcc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39684
No description provided.