Fix T39684, warn when entering sculpt mode with an object with non-